examples/test/testpolicy10727.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10727
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key17: value1
      key35: value46
      key27: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value3
      podSelector:
        matchLabels:
          key32: value18
          key17: value34
          key20: value43
